#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
é¢ç›¸åˆ†æžæ ¸å¿ƒé€»è¾‘ï¼ˆç‹¬ç«‹æ¨¡å—ï¼Œä¸å½±å“æ‰‹ç›¸ï¼‰
"""

import os
import logging

logger = logging.getLogger(__name__)
import sys
from typing import Dict, Any, Optional

BASE_DIR = os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__))))
PROJECT_ROOT = BASE_DIR
sys.path.insert(0, PROJECT_ROOT)

# æ·»åŠ æœåŠ¡ç›®å½•åˆ°è·¯å¾„
service_dir = os.path.dirname(os.path.abspath(__file__))
sys.path.insert(0, service_dir)

from face_analyzer import FaceAnalyzer
# æ”¹ä¸ºè°ƒç”¨ fortune_rule å¾®æœåŠ¡ï¼Œä¸å†ä½¿ç”¨æœ¬åœ° rule_engine
from fortune_rule_client import FortuneRuleClient
from coze_integration import CozeIntegration


class FaceAnalyzerCore:
    """é¢ç›¸åˆ†æžæ ¸å¿ƒç±»ï¼ˆç‹¬ç«‹æ¨¡å—ï¼Œä¸å½±å“æ‰‹ç›¸ï¼‰"""
    
    def __init__(self):
        self.face_analyzer = FaceAnalyzer()
        # ä½¿ç”¨ fortune_rule å¾®æœåŠ¡å®¢æˆ·ç«¯
        self.rule_client = FortuneRuleClient()
        self.coze_integration = CozeIntegration()
    
    def analyze_face(
        self,
        image_bytes: bytes,
        image_format: str = "jpg",
        bazi_info: Optional[Any] = None
    ) -> Dict[str, Any]:
        """
        åˆ†æžé¢ç›¸
        
        Args:
            image_bytes: å›¾åƒå­—èŠ‚æ•°æ®
            image_format: å›¾åƒæ ¼å¼
            bazi_info: å…«å­—ä¿¡æ¯ï¼ˆprotobuf å¯¹è±¡ï¼‰
            
        Returns:
            åˆ†æžç»“æžœ
        """
        try:
            import datetime
            request_time = datetime.datetime.now().strftime("%Y-%m-%d %H:%M:%S")
            
            logger.info("\n" + "="*80)
            logger.info("ðŸ”® é¢ç›¸åˆ†æžæµç¨‹å¼€å§‹")
            logger.info("="*80)
            logger.info(f"[{request_time}] ðŸ“¸ å¼€å§‹é¢ç›¸åˆ†æž", flush=True)
            
            # 1. æå–é¢éƒ¨ç‰¹å¾ï¼ˆæ€§èƒ½ä¼˜åŒ–ï¼šé»˜è®¤å…³é—­ç‰¹æ®Šç‰¹å¾æ£€æµ‹ï¼‰
            logger.info(f"[{request_time}] ðŸ“‹ æ­¥éª¤1: æå–é¢éƒ¨ç‰¹å¾...", flush=True)
            face_result = self.face_analyzer.analyze(image_bytes, image_format, enable_special_features=False)
            
            if not face_result.get("success"):
                logger.info(f"[{request_time}] âŒ é¢éƒ¨ç‰¹å¾æå–å¤±è´¥: {face_result.get('error', 'æœªçŸ¥é”™è¯¯')}", flush=True)
                return face_result
            
            face_features = face_result.get("features", {})
            logger.info(f"[{request_time}] âœ… é¢éƒ¨ç‰¹å¾æå–å®Œæˆ", flush=True)
            
            # 2. è§„åˆ™åŒ¹é…å’Œå…«å­—èžåˆï¼ˆè°ƒç”¨ fortune_rule å¾®æœåŠ¡ï¼‰
            logger.info(f"\n[{request_time}] ðŸ“‹ æ­¥éª¤2: è§„åˆ™åŒ¹é…å’Œå…«å­—èžåˆ...", flush=True)
            bazi_info_dict = None
            if bazi_info and bazi_info.use_bazi:
                bazi_info_dict = {
                    "solar_date": bazi_info.solar_date,
                    "solar_time": bazi_info.solar_time,
                    "gender": bazi_info.gender,
                    "use_bazi": True
                }
                logger.info(f"[{request_time}] ðŸ“… å…«å­—ä¿¡æ¯: {bazi_info.solar_date} {bazi_info.solar_time} {bazi_info.gender}", flush=True)
            else:
                logger.info(f"[{request_time}] âš ï¸  æœªæä¾›å…«å­—ä¿¡æ¯ï¼Œä»…è¿›è¡Œé¢ç›¸è§„åˆ™åŒ¹é…", flush=True)
            
            # è°ƒç”¨ fortune_rule å¾®æœåŠ¡
            logger.info(f"[{request_time}] ðŸ” è°ƒç”¨ fortune_rule å¾®æœåŠ¡è¿›è¡Œè§„åˆ™åŒ¹é…...", flush=True)
            rule_result = self.rule_client.match_face_rules(
                face_features=face_features,
                bazi_info=bazi_info_dict,
                bazi_data=None  # è®©å¾®æœåŠ¡å†…éƒ¨èŽ·å–å…«å­—æ•°æ®
            )
            
            if not rule_result.get("success"):
                logger.info(f"[{request_time}] âŒ è§„åˆ™åŒ¹é…å¤±è´¥: {rule_result.get('error', 'æœªçŸ¥é”™è¯¯')}", flush=True)
                return {
                    "success": False,
                    "error": rule_result.get("error", "è§„åˆ™åŒ¹é…å¤±è´¥")
                }
            
            face_insights = rule_result.get("insights", [])
            integrated_insights = rule_result.get("integrated_insights", [])
            recommendations = rule_result.get("recommendations", [])
            bazi_data = rule_result.get("bazi_data")
            
            logger.info(f"[{request_time}] âœ… è§„åˆ™åŒ¹é…å®Œæˆ", flush=True)
            logger.info(f"[{request_time}] ðŸ“Š åŒ¹é…ç»“æžœ:", flush=True)
            logger.info(f"   é¢ç›¸è§„åˆ™æ´žå¯Ÿ: {len(face_insights)}æ¡", flush=True)
            logger.info(f"   å…«å­—èžåˆæ´žå¯Ÿ: {len(integrated_insights)}æ¡", flush=True)
            logger.info(f"   å»ºè®®: {len(recommendations)}æ¡", flush=True)
            
            # 3. AI å¢žå¼ºï¼ˆå¯é€‰ï¼Œé»˜è®¤å…³é—­ä»¥æå‡æ€§èƒ½ï¼‰
            ai_enhanced_insights = []
            # å¦‚æžœéœ€è¦AIå¢žå¼ºï¼Œå¯ä»¥é€šè¿‡çŽ¯å¢ƒå˜é‡å¯ç”¨ï¼šENABLE_AI_ENHANCEMENT=true
            enable_ai = os.getenv("ENABLE_AI_ENHANCEMENT", "false").lower() == "true"
            if enable_ai:
                logger.info(f"\n[{request_time}] ðŸ“‹ æ­¥éª¤3: AI å¢žå¼ºåˆ†æž...", flush=True)
                try:
                    # å‡†å¤‡æ•°æ®
                    analysis_data = {
                        "type": "face",
                        "features": face_features,
                        "insights": face_insights,
                        "bazi_data": bazi_data
                    }
                    
                    # è°ƒç”¨ Coze API
                    logger.info(f"[{request_time}] ðŸ¤– è°ƒç”¨ Coze API è¿›è¡ŒAIå¢žå¼º...", flush=True)
                    ai_result = self.coze_integration.enhance_analysis(analysis_data)
                    if ai_result:
                        ai_enhanced_insights = ai_result.get("enhanced_insights", [])
                        logger.info(f"[{request_time}] âœ… AIå¢žå¼ºå®Œæˆï¼Œæ–°å¢ž {len(ai_enhanced_insights)} æ¡æ´žå¯Ÿ", flush=True)
                    else:
                        logger.info(f"[{request_time}] âš ï¸  AIå¢žå¼ºæœªè¿”å›žç»“æžœ", flush=True)
                except Exception as e:
                    logger.info(f"[{request_time}] âš ï¸  Coze API è°ƒç”¨å¤±è´¥: {e}", flush=True)
            else:
                logger.info(f"[{request_time}] â­ï¸  è·³è¿‡AIå¢žå¼ºï¼ˆé»˜è®¤å…³é—­ä»¥æå‡æ€§èƒ½ï¼‰", flush=True)
            
            # 4. åˆå¹¶æ‰€æœ‰æ´žå¯Ÿï¼ˆåŽ»é‡ï¼‰
            logger.info(f"\n[{request_time}] ðŸ“‹ æ­¥éª¤4: åˆå¹¶æ‰€æœ‰æ´žå¯Ÿå¹¶åŽ»é‡...", flush=True)
            all_insights = face_insights + integrated_insights + ai_enhanced_insights
            
            # å¯¹åˆå¹¶åŽçš„insightsè¿›è¡ŒåŽ»é‡å’Œæç‚¼
            from services.fortune_rule.rule_engine import FortuneRuleEngine
            rule_engine = FortuneRuleEngine()
            all_insights = rule_engine._merge_and_refine_insights(all_insights)
            
            logger.info(f"[{request_time}] âœ… åˆå¹¶å®Œæˆï¼Œå…± {len(all_insights)} æ¡æ´žå¯Ÿï¼ˆå·²åŽ»é‡ï¼‰", flush=True)
            
            # 5. è®¡ç®—ç½®ä¿¡åº¦
            logger.info(f"[{request_time}] ðŸ“‹ æ­¥éª¤5: è®¡ç®—ç½®ä¿¡åº¦...", flush=True)
            confidence = self._calculate_confidence(face_features, len(all_insights))
            logger.info(f"[{request_time}] âœ… ç½®ä¿¡åº¦è®¡ç®—å®Œæˆ: {confidence:.2%}", flush=True)
            
            # 6. æž„å»ºå®Œæ•´æŠ¥å‘Š
            logger.info(f"\n[{request_time}] ðŸ“‹ æ­¥éª¤6: æž„å»ºå®Œæ•´æŠ¥å‘Š...", flush=True)
            report = {
                "success": True,
                "features": face_features,
                "insights": all_insights,
                "integrated_insights": integrated_insights, # Keep for debugging if needed, but frontend uses 'insights'
                "bazi_data": bazi_data,
                "recommendations": recommendations,
                "confidence": confidence
            }
            
            return report
            
        except Exception as e:
            import traceback
            error_msg = f"é¢ç›¸åˆ†æžå¤±è´¥: {str(e)}"
            logger.info(f"âŒ {error_msg}\n{traceback.format_exc()}")
            return {
                "success": False,
                "error": error_msg
            }
    
    def _calculate_confidence(self, features: Dict[str, Any], insights_count: int) -> float:
        """
        è®¡ç®—åˆ†æžç½®ä¿¡åº¦ï¼ˆé¢ç›¸ä¸“ç”¨ï¼‰
        
        Args:
            features: é¢ç›¸ç‰¹å¾
            insights_count: æ´žå¯Ÿæ•°é‡
            
        Returns:
            ç½®ä¿¡åº¦ï¼ˆ0-1ä¹‹é—´ï¼‰
        """
        base_confidence = 0.6
        
        # åŸºäºŽç‰¹å¾å®Œæ•´æ€§
        san_ting = features.get("san_ting_ratio", {})
        if san_ting.get("upper", 0) > 0 and san_ting.get("middle", 0) > 0 and san_ting.get("lower", 0) > 0:
            base_confidence += 0.15
        
        measurements = features.get("feature_measurements", {})
        if measurements.get("eye_width", 0) > 0:
            base_confidence += 0.05
        if measurements.get("nose_height", 0) > 0:
            base_confidence += 0.05
        if measurements.get("mouth_width", 0) > 0:
            base_confidence += 0.05
        
        # åŸºäºŽæ´žå¯Ÿæ•°é‡
        if insights_count > 15:
            base_confidence += 0.1
        elif insights_count > 10:
            base_confidence += 0.05
        
        return min(base_confidence, 0.95)

